tests/union/union.exp
Error -------------------------------------------------------- issue-198.js:9:20

Cannot call `str.toFixed` because property `toFixed` is missing in `String`.

Error: issue-198.js:9
  9:         return str.toFixed();
                        ^^^^^^^ Cannot call `str.toFixed` because property `toFixed` is missing in `String` [1].
  References:
  141:     toFixed(fractionDigits?: number): string;
                                             ^^^^^^ [1]: `String`. See lib: <BUILTINS>/core.js:141

Error -------------------------------------------------------- issue-324.js:8:10

Cannot assign `barstr` to `foostr` because `Bar` is incompatible with `Foo`.

Error: issue-324.js:8
  8: foostr = barstr;
              ^^^^^^ Cannot assign `barstr` to `foostr` because `Bar` [1] is incompatible with `Foo` [2].
  References:
    6: var barstr: Bar | string = new Bar();
                   ^^^ [1]: `Bar`
    5: var foostr: Foo | string = new Foo();
                   ^^^ [2]: `Foo`

Error ------------------------------------------------------------- union.js:2:5

Cannot call `bar` with `0` bound to `x` because number is incompatible with
string.

Error: union.js:2
  2: bar(0);
         ^ Cannot call `bar` with `0` bound to `x` because number [1] is incompatible with string [2].
  References:
    2: bar(0);
           ^ [1]: number
    1: function bar(x: Document | string): void { }
                                  ^^^^^^ [2]: string

Error ------------------------------------------------------------ union.js:8:13

Cannot assign `new E()` to `c` because `D` is incompatible with `C`.

Error: union.js:8
  8:   var c:C = new E(); // error, since E could be D, and D is not a subtype of C
                 ^^^^^^^ Cannot assign `new E()` to `c` because `D` [1] is incompatible with `C` [2].
  References:
    8:   var c:C = new E(); // error, since E could be D, and D is not a subtype of C
                   ^^^^^^^ [1]: `D`
    8:   var c:C = new E(); // error, since E could be D, and D is not a subtype of C
               ^ [2]: `C`

Error ------------------------------------------------------------ union.js:9:19

`D` is incompatible with `C`.

Error: union.js:9
  9:   function qux(e: E) { } // this annotation is an error: is it C, or is it D?
                       ^ `D` [1] is incompatible with `C` [2].
  References:
    5: class D { }
             ^ [1]: `D`
    4: class C { }
             ^ [2]: `C`

Error ------------------------------------------------------------- yuge.js:23:6

Cannot cast empty string to `ErrorCode` because string is incompatible with
number enum.

Error: yuge.js:23
 23:     ("": ErrorCode);  // also, error pos omits this line completely
          ^^ Cannot cast empty string to `ErrorCode` because string [1] is incompatible with number enum [2].
  References:
   23:     ("": ErrorCode);  // also, error pos omits this line completely
            ^^ [1]: string
   23:     ("": ErrorCode);  // also, error pos omits this line completely
                ^^^^^^^^^ [2]: number enum


Found 6 errors
